Added new gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,11 @@
 /public/storage
 /storage/*.key
 /vendor
+/.idea
 .env
 .env.backup
+composer.lock
 .phpunit.result.cache
-docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
